app/k8s/multiwoven-postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: multiwoven-postgresql
  name: multiwoven-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: multiwoven-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/multiwoven-server-default: "true"
        io.kompose.service: multiwoven-postgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  name: multiwoven-config
                  key: DB_PASSWORD
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  name: multiwoven-config
                  key: DB_USERNAME
          image: postgres:13
          name: multiwoven-postgresql
          ports:
            - containerPort: 5432
              hostPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: multiwoven-postgresql-pvc
      restartPolicy: Always
      volumes:
        - name: multiwoven-postgresql-pvc
          persistentVolumeClaim:
            claimName: multiwoven-postgresql-pvc
