app/k8s/multiwoven-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiwoven-server
  labels:
    app: multiwoven-server
    io.kompose.service: multiwoven-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiwoven-server
      io.kompose.service: multiwoven-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: multiwoven-server
        io.kompose.service: multiwoven-server
    spec:
      containers:
        - name: multiwoven-server
          image: multiwoven/multiwoven-server:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
