app/k8s/multiwoven-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: multiwoven-worker
  name: multiwoven-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: multiwoven-worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/multiwoven-server-default: "true"
        io.kompose.service: multiwoven-worker
    spec:
      containers:
        - args:
            - sh
            - -c
            - ./app/temporal/cli/register_namespace && ./app/temporal/cli/worker
          image:  multiwoven/multiwoven-server:latest
          name: multiwoven-worker
      restartPolicy: Always
