app/k8s/temporal-admin-tools-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: temporal-admin-tools
  name: temporal-admin-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: temporal-admin-tools
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/multiwoven-server-default: "true"
        io.kompose.service: temporal-admin-tools
    spec:
      containers:
        - env:
            - name: TEMPORAL_ADDRESS
              value: temporal:7233
            - name: TEMPORAL_CLI_ADDRESS
              value: temporal:7233
          image: temporalio/admin-tools:1.22.4
          name: temporal-admin-tools
          stdin: true
          tty: true
      restartPolicy: Always
