app/k8s/temporal-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
    kompose.volume.type: configMap
  labels:
    io.kompose.service: temporal
  name: temporal
spec:
  ports:
    - name: "7233"
      port: 7233
      targetPort: 7233
  selector:
    io.kompose.service: temporal
