app/k8s/multiwoven-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiwoven-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.multiwoven.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: multiwoven-server
                port:
                  number: 3000
